--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         <ul class="list-unstyled list-social">
           <li><a href="https://web.facebook.com/johncarlo.evasco.33"><i class="bi bi-facebook"></i></a></li>
           <li><a href="https://twitter.com/Antuga1"><i class="bi bi-twitter"></i></a></li>
-          <li><a href="assets/StudentGradeApplication.zip"><i>Download the C# File</i></a></li>
+          <li><a href="assets/StudentGradeApplication.zip"><i></i></a></li>
         </ul>
       </div>
     </div>
