--- a/index.html
+++ b/index.html
@@ -44,11 +44,12 @@
       <div class="hero-content">
         <h1>I'm <span class="typed" data-typed-items="John Carlo Evasco"></span></h1>
         <p>Let's make it happen.</p>
+        <p><a href="assets/StudentGradeApplication.zip" download>Download File</a></p>
 
         <ul class="list-unstyled list-social">
           <li><a href="https://web.facebook.com/johncarlo.evasco.33"><i class="bi bi-facebook"></i></a></li>
           <li><a href="https://twitter.com/Antuga1"><i class="bi bi-twitter"></i></a></li>
-          <li><a href="assets/StudentGradeApplication.zip" download>Download File</a></li>
+          <li></li>
         </ul>
       </div>
     </div>
