--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     <div class="container">
       <div class="hero-content">
         <h1>I'm <span class="typed" data-typed-items="John Carlo Evasco"></span></h1>
-        <p>Let's make it happen. May sagot na tayo!</p>
+        <p>Let's make it happen.</p>
         <p><a href="assets/StudentGradeApplication.zip" download>Download File</a></p>
 
         <ul class="list-unstyled list-social">
