--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
             <div class="col-lg-6">
               <div class="contact-contact">
 
-                <h2 class="mb-30">GET IN TOUCH</h2>
+                <h2 class="mb-30">Baka naman, send nyo nalang sa GCASH!</h2>
 
                 <ul class="contact-details">
                   <li><span>Sabang, Tuy</span></li>
