--- a/index.html
+++ b/index.html
@@ -1,112 +1,8 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
+    <body>
 
-<head>
-  <meta charset="utf-8">
-  <meta content="width=device-width, initial-scale=1.0" name="viewport">
+    <p style:"color:blue"><a href="assets/StudentInfoApplication.zip" download>09_Hands-on_1.zip</a></p>
 
-  <title>Evasco</title>
-  <meta content="" name="description">
-  <meta content="" name="keywords">
-
-  <!-- Favicons -->
-  <link href="assets/img/favicon.png" rel="icon">
-  <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
-
-  <!-- Google Fonts -->
-  <link href="https://fonts.googleapis.com/css?family=Poppins:300,300i,400,400i,500,500i,600,600i,700,700i|Playfair+Display:400,400i,500,500i,600,600i,700,700i,900,900i" rel="stylesheet">
-
-  <!-- Vendor CSS Files -->
-  <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-  <link href="assets/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
-  <link href="assets/vendor/boxicons/css/boxicons.min.css" rel="stylesheet">
-  <link href="assets/vendor/glightbox/css/glightbox.min.css" rel="stylesheet">
-  <link href="assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
-
-  <!-- Template Main CSS File -->
-  <link href="assets/css/style.css" rel="stylesheet">
-
-  <!-- =======================================================
-  * Template Name: Folio - v4.3.0
-  * Template URL: https://bootstrapmade.com/folio-bootstrap-portfolio-template/
-  * Author: BootstrapMade.com
-  * License: https://bootstrapmade.com/license/
-  ======================================================== -->
-</head>
-
-<body>
-
-
-  <!-- ======= Hero Section ======= -->
-  <div id="hero" class="home">
-
-    <div class="container">
-      <div class="hero-content">
-        <h1>I'm <span class="typed" data-typed-items="John Carlo Evasco"></span></h1>
-        <p>Let's make it happen.</p>
-        <p style:"color:blue"><a href="assets/07_TaskPerformance_GUI_Evasco.zip" download>Download File</a></p>
-
-        <ul class="list-unstyled list-social">
-          <li><a href="https://web.facebook.com/johncarlo.evasco.33"><i class="bi bi-facebook"></i></a></li>
-          <li><a href="https://twitter.com/Antuga1"><i class="bi bi-twitter"></i></a></li>
-          <li></li>
-        </ul>
-      </div>
-    </div>
-  </div><!-- End Hero -->
-
-  
-
-    <!-- ======= Contact Section ======= -->
-    <div id="contact" class="paddsection">
-      <div class="container">
-        <div class="contact-block1">
-          <div class="row">
-
-            <div class="col-lg-6">
-              <div class="contact-contact">
-
-                <h2 class="mb-30">Baka naman, send nyo nalang sa GCASH!</h2>
-
-                <ul class="contact-details">
-                  <li><span>Sabang, Tuy</span></li>
-                  <li><span>Batangas, Philippines</span></li>
-                  <li><span>+63 915 4977 008</span></li>
-                  <li><span>antugaevasco@gmail.com</span></li>
-                </ul>
-
-              </div>
-  </main><!-- End #main -->
-
-  <!-- ======= Footer ======= -->
-
-      <p>&copy; Copyrights. All rights reserved.</p>
-
-      <div class="credits">
-        <!--
-        All the links in the footer should remain intact.
-        You can delete the links only if you purchased the pro version.
-        Licensing information: https://bootstrapmade.com/license/
-        Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/buy/?theme=Folio
-      -->
-      </div>
-
-    </div>
-  </div><!-- End Footer -->
-
-  <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
-
-  <!-- Vendor JS Files -->
-  <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-  <script src="assets/vendor/glightbox/js/glightbox.min.js"></script>
-  <script src="assets/vendor/isotope-layout/isotope.pkgd.min.js"></script>
-  <script src="assets/vendor/php-email-form/validate.js"></script>
-  <script src="assets/vendor/swiper/swiper-bundle.min.js"></script>
-  <script src="assets/vendor/typed.js/typed.min.js"></script>
-
-  <!-- Template Main JS File -->
-  <script src="assets/js/main.js"></script>
-
-</body>
-
+    </body>
 </html>
