--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <body>
 
     <p style:"color:blue"><a href="assets/StudentInfoApplication.zip" download>09_Hands-on_1.zip</a></p>
+    <p style:"color:blue"><a href="assets/StudentInfoApplication.zip" download>09_Hands-on_1.zip</a></p>
 
     </body>
 </html>
