--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html>
     <body>
 
-    <p style:"color:blue"><a href="assets/StudentInfoApplication.zip" download>09_Hands-on_1.zip</a></p>
-    <p style:"color:blue"><a href="assets/EmployeeApplication.zip" download>09_Hands-on_2.zip</a></p>
+    <p style:"color:blue"><a href="assets/StudentInfoApplication.zip" download>1. 09_Hands-on_1.zip</a></p>
+    <p style:"color:blue"><a href="assets/EmployeeApplication.zip" download>2. 09_Hands-on_2.zip</a></p>
 
     </body>
 </html>
