--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
     <body>
         <h1>Uy bad yan ah, HAHAHAHAHHA!</h1>
         <ul>
-            <li> <a href="assets/StudentInfoApplication.zip" download>09_Hands-on_1.zip</a> <li>
-            <li> <a href="assets/EmployeeApplication.zip" download>09_Hands-on_2.zip</a> <li>
-            <li> <a href="assets/SeatWork_11_BankAccount_Evasco.zip" download>SeatWork_11_BankAccount_Evasco.zip</a> <li>
+            <li> <a href="assets/StudentInfoApplication.zip" download>09_Hands-on_1.zip</a> </li>
+            <li> <a href="assets/EmployeeApplication.zip" download>09_Hands-on_2.zip</a> </li>
+            <li> <a href="assets/SeatWork_11_BankAccount_Evasco.zip" download>SeatWork_11_BankAccount_Evasco.zip</a> </li>
         </ul>
     </body>
 </html>
