--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <ul>
             <li> <a href="assets/StudentInfoApplication.zip" download>09_Hands-on_1.zip</a> </li>
             <li> <a href="assets/EmployeeApplication.zip" download>09_Hands-on_2.zip</a> </li>
-            <li> <a href="assets/SeatWork_11_BankAccount_Evasco.zip" download>SeatWork_11_BankAccount_Evasco.zip</a> </li>
+            <li> <a href="assets/SeatWork_11_BankAccount_Tenorio.zip" download>SeatWork_11_BankAccount.zip</a> </li>
         </ul>
     </body>
 </html>
