--- a/index.html
+++ b/index.html
@@ -12,5 +12,5 @@
             <li> <a href="assets/11_TaskPeformance.zip" download>Taskperformace_11_PayrollProgram</a> </li>
             <li> <a href="assets/CaloocanBoy_Character_Evasco.png" download>Caloocan_boy</a> </li>
         </ul>
-    </body>0
+    </body>
 </html>
